Fixed a bug which was preventing us to build more than one AMI per day

--- a/cfn/amifactory.yml
+++ b/cfn/amifactory.yml
@@ -134,7 +134,7 @@ Resources:
           AMIVersion:
             type: String
             description: Golden AMI Build version number to be created.
-            default: "{{ global:DATE }}"
+            default: "{{ global:DATE_TIME }}"
           SubnetId:
             type: String
             default: !Ref SubnetId
